# Operit2

./: .gitignore  README.md
apps/cli/: Cargo.toml
apps/cli/src/: bootstrap.rs  chat_runtime.rs  client_paths.rs  main.rs  web_access_assets.rs
apps/cli/src/cli/: access.rs  chat.rs  core.rs  host.rs  link.rs  market.rs  mcp.rs  memory.rs  mod.rs  model.rs  package.rs  people.rs  prefs.rs  skill.rs  tag.rs  transfer.rs  web_access.rs
apps/cli/src/tui/: app.rs  approval.rs  commands.rs  empty_state.rs  helpers.rs  input.rs  link_proxy_rs.rs  markdown.rs  mod.rs  render.rs  theme.rs  typewriter.rs
apps/flutter/native/operit-flutter-bridge/: Cargo.toml
apps/flutter/native/operit-flutter-bridge/src/: lib.rs
core/: Cargo.toml
core/crates/operit-command-core/src/commands/: approval.rs  chat.rs  log.rs  market.rs  mcp.rs  memory.rs  mod.rs  model.rs  package.rs  people.rs  plugin.rs  prefs.rs  skill.rs  tool.rs  workspace.rs
core/crates/operit-core-proxy/: Cargo.toml  build.rs  build_rust_codegen.rs  build_scanner.rs
core/crates/operit-core-proxy/src/: lib.rs
core/crates/operit-host-api/src/: lib.rs
core/crates/operit-link/: Cargo.toml
core/crates/operit-link/src/: client.rs  lib.rs  local.rs  protocol.rs  registry.rs  remote.rs
core/crates/operit-runtime/: Cargo.toml  build.rs
core/crates/operit-runtime/src/api/chat/: EnhancedAIService.rs
core/crates/operit-runtime/src/api/chat/enhance/: ConversationMarkupManager.rs  ConversationService.rs  FileBindingService.rs  MultiServiceManager.rs  ToolExecutionManager.rs
core/crates/operit-runtime/src/api/chat/llmprovider/: AIServiceFactory.rs  DeepseekProvider.rs  DoubaoAIProvider.rs  FourRouterProvider.rs  GeminiProvider.rs  KimiProvider.rs  MistralProvider.rs  ModelConfigConnectionTester.rs  ModelListFetcher.rs  NvidiaAIProvider.rs  OllamaProvider.rs  OpenAIProvider.rs  OpenAIResponsesProvider.rs  OpenRouterProvider.rs  QwenAIProvider.rs  StructuredToolCallBridge.rs  ToolPkgJsAiProviderService.rs
core/crates/operit-runtime/src/core/application/: OperitApplication.rs  OperitApplicationContext.rs
core/crates/operit-runtime/src/core/chat/: AIMessageManager.rs
core/crates/operit-runtime/src/core/chat/plugins/: MessageProcessingPluginRegistry.rs
core/crates/operit-runtime/src/core/config/: SystemPromptConfig.rs  SystemToolPrompts.rs  SystemToolPromptsInternal.rs
core/crates/operit-runtime/src/core/tools/: AIToolHandler.rs  ToolPackage.rs  ToolPermissionSystem.rs  ToolProgressBus.rs  ToolRegistration.rs  ToolResultDataClasses.rs  mod.rs
core/crates/operit-runtime/src/core/tools/climode/: CliToolModeSupport.rs
core/crates/operit-runtime/src/core/tools/defaultTool/: ToolGetter.rs
core/crates/operit-runtime/src/core/tools/javascript/: JsComposeDslBridge.rs  JsEngine.rs  JsExecutionResultProtocol.rs  JsInitRuntime.script.js  JsLibraries.rs  JsNativeInterfaceDelegates.rs  JsToolManager.rs  JsTools.rs  mod.rs
core/crates/operit-runtime/src/core/tools/mcp/: MCPManager.rs  MCPPackage.rs  MCPServerConfig.rs  MCPTool.rs  MCPToolExecutor.rs  MCPToolParameter.rs  mod.rs
core/crates/operit-runtime/src/core/tools/packTool/: PackageManager.rs  PackageManagerToolPkgFacade.rs  ToolPkgLoader.rs  ToolPkgMainRegistrationScriptParser.rs  ToolPkgManager.rs
core/crates/operit-runtime/src/core/tools/skill/: SkillManager.rs  SkillPackage.rs  mod.rs
core/crates/operit-runtime/src/data/: mod.rs
core/crates/operit-runtime/src/data/api/: MarketStatsApiService.rs  mod.rs
core/crates/operit-runtime/src/data/backup/: RawSnapshotBackupManager.rs  mod.rs
core/crates/operit-runtime/src/data/collects/: ModelCatalog.rs
core/crates/operit-runtime/src/data/dao/: ChatDao.rs  MessageDao.rs
core/crates/operit-runtime/src/data/mcp/: MCPLocalServer.rs  MCPRepository.rs  mod.rs
core/crates/operit-runtime/src/data/model/: BillingMode.rs  CharacterCard.rs  ChatMessageLocatorPreview.rs  ChatTurnOptions.rs  Memory.rs  MemoryExportModel.rs  MemorySearchConfig.rs  ModelCatalog.rs  ModelConfigData.rs  OperitChatArchive.rs  mod.rs
core/crates/operit-runtime/src/data/preferences/: ApiPreferences.rs  CharacterCardManager.rs  CharacterCardToolAccessResolver.rs  EnvPreferences.rs  FunctionalConfigManager.rs  GitHubAuthPreferences.rs  MemorySearchSettingsPreferences.rs  ModelConfigManager.rs  SkillVisibilityPreferences.rs  UserPreferencesManager.rs
core/crates/operit-runtime/src/data/repository/: ChatHistoryManager.rs  MemoryRepository.rs  RuntimeTerminalService.rs  WorkspaceService.rs  mod.rs
core/crates/operit-runtime/src/data/skill/: SkillRepository.rs  mod.rs
core/crates/operit-runtime/src/plugins/: PluginRegistry.rs
core/crates/operit-runtime/src/plugins/toolpkg/: ToolPkgChatInputHookBridge.rs  ToolPkgChatViewHookBridge.rs  ToolPkgInputMenuToggleBridge.rs  ToolPkgMessageProcessingBridge.rs  ToolPkgPromptHookBridge.rs  ToolPkgSummaryHookBridge.rs  ToolPkgToolLifecycleBridge.rs
core/crates/operit-runtime/src/services/: ChatServiceCore.rs
core/crates/operit-runtime/src/services/core/: ChatHistoryDelegate.rs  MessageCoordinationDelegate.rs  MessageProcessingDelegate.rs  TokenStatisticsDelegate.rs
core/crates/operit-runtime/src/util/: AppLogger.rs  ChainLogger.rs  GithubReleaseUtil.rs  MarkdownRenderStream.rs  mod.rs
core/crates/operit-store/src/: ObjectBoxStore.rs  PreferencesDataStore.rs  RuntimeStorePaths.rs  SqliteStore.rs  lib.rs
docs/: docassembly.md  (+1 more)
hosts/android/: Cargo.toml
hosts/android/src/: lib.rs
hosts/linux/: Cargo.toml
hosts/linux/src/: host_runtime_event.rs  lib.rs
hosts/linux/src/tools/: mod.rs
hosts/linux/src/tools/browser/: mod.rs
hosts/linux/src/tools/fs/: mod.rs
hosts/linux/src/tools/runtime/: mod.rs
hosts/linux/src/tools/system/: mod.rs
hosts/linux/src/tools/terminal/: mod.rs
hosts/windows/: Cargo.toml
hosts/windows/src/: lib.rs
hosts/windows/src/tools/: mod.rs
hosts/windows/src/tools/browser/: mod.rs
hosts/windows/src/tools/fs/: mod.rs
hosts/windows/src/tools/runtime/: mod.rs
hosts/windows/src/tools/system/: mod.rs
hosts/windows/src/tools/terminal/: mod.rs
(+207 files in other folders)
