[workspace]
members = [
    "crates/operit-host-api",
    "crates/operit-core-proxy",
    "crates/operit-link",
    "crates/operit-store",
    "crates/operit-runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
regex = "1"
json5 = "0.4"
boa_engine = "0.20"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
