[package]
name = "operit-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "operit2"
path = "src/main.rs"

[dependencies]
arboard = "3"
async-trait = "0.1"
base64 = "0.22"
crossterm = "0.28"
image = { version = "0.25", default-features = false, features = ["png"] }
include_dir = "0.7"
operit-core-proxy = { path = "../../core/crates/operit-core-proxy" }
operit-command-core = { path = "../../core/crates/operit-command-core" }
operit-host-api = { path = "../../core/crates/operit-host-api" }
operit-link = { path = "../../core/crates/operit-link" }
operit-runtime = { path = "../../core/crates/operit-runtime" }
operit-store = { path = "../../core/crates/operit-store" }
ratatui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
operit-host-windows-native = { path = "../../hosts/windows" }

[target.'cfg(target_os = "linux")'.dependencies]
operit-host-linux-native = { path = "../../hosts/linux" }
