[package]
name = "operit-host-android-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
libc = "0.2"
operit-host-api = { path = "../../core/crates/operit-host-api" }
operit-host-linux-native = { path = "../linux" }
uuid = { version = "1", features = ["v4"] }
