[package]
name = "operit-host-linux-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
operit-host-api = { path = "../../core/crates/operit-host-api" }
portable-pty = "0.9.0"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
