[package]
name = "operit-core-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
operit-link = { path = "../operit-link" }
operit-runtime = { path = "../operit-runtime" }
operit-store = { path = "../operit-store" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }

[build-dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
