[package]
name = "operit-link"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.7", features = ["ws"] }
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["net", "rt"] }
uuid.workspace = true
x25519-dalek = { version = "2", features = ["static_secrets"] }
