[package]
name = "operit-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
json5.workspace = true
boa_engine.workspace = true
operit-host-api = { path = "../operit-host-api" }
operit-store = { path = "../operit-store" }
reqwest.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
zip.workspace = true
