[package]
name = "operit-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
json5.workspace = true
operit-host-api = { path = "../operit-host-api" }
operit-store = { path = "../operit-store" }
reqwest.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time"] }
url = "2"
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
rusqlite.workspace = true

[build-dependencies]
zip.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rquickjs.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
quickjs-wasm-rs = "3.1.0"
uuid = { workspace = true, features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "XmlHttpRequest"] }
