[package]
name = "operit-flutter-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
operit-core-proxy = { path = "../../../../core/crates/operit-core-proxy" }
operit-link = { path = "../../../../core/crates/operit-link" }
operit-runtime = { path = "../../../../core/crates/operit-runtime" }
operit-store = { path = "../../../../core/crates/operit-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
operit-host-android-native = { path = "../../../../hosts/android" }

[target.'cfg(windows)'.dependencies]
operit-host-windows-native = { path = "../../../../hosts/windows" }

[target.'cfg(target_os = "linux")'.dependencies]
operit-host-linux-native = { path = "../../../../hosts/linux" }
